// ==========================================================
// Dental Clinic Database — DBML Schema
// Import this at https://dbdiagram.io for an editable ER diagram
// ==========================================================

Table dentists {
  dentist_id        int       [pk, increment]
  full_name         varchar   [not null]
  specialization    varchar
  phone             varchar
  email             varchar   [unique]
  years_experience  int       [default: 0]
  clinic_room       varchar
  created_at        timestamp [default: `now()`]
}

Table services {
  service_id        int       [pk, increment]
  service_name      varchar   [not null]
  description       text
  duration_minutes  int       [not null, default: 30]
  price             decimal   [not null]
  created_at        timestamp [default: `now()`]
}

// Many-to-many: which dentist performs which service
Table dentist_services {
  dentist_id  int [not null]
  service_id  int [not null]

  Indexes {
    (dentist_id, service_id) [pk]
  }
}

Table dentist_slots {
  slot_id     int     [pk, increment]
  dentist_id  int     [not null]
  slot_date   date    [not null]
  start_time  time    [not null]
  end_time    time    [not null]
  is_booked   boolean [default: false]

  Indexes {
    (dentist_id, slot_date, start_time) [unique]
  }
}

Table patients {
  patient_id  int       [pk, increment]
  full_name   varchar   [not null]
  phone       varchar   [not null, unique]
  email       varchar
  dob         date
  gender      varchar
  address     text
  created_at  timestamp [default: `now()`]
}

Table appointments {
  appointment_id  int       [pk, increment]
  patient_id      int       [not null]
  dentist_id      int       [not null]
  service_id      int       [not null]
  slot_id         int       [not null]
  status          varchar   [default: 'scheduled', note: 'scheduled | completed | cancelled | no_show']
  notes           text
  created_at      timestamp [default: `now()`]
}

// ----------------------------------------------------------
// Relationships
// ----------------------------------------------------------
Ref: dentist_services.dentist_id > dentists.dentist_id     // many-to-one
Ref: dentist_services.service_id > services.service_id     // many-to-one

Ref: dentist_slots.dentist_id > dentists.dentist_id        // many-to-one

Ref: appointments.patient_id > patients.patient_id         // many-to-one
Ref: appointments.dentist_id > dentists.dentist_id         // many-to-one
Ref: appointments.service_id > services.service_id         // many-to-one
Ref: appointments.slot_id - dentist_slots.slot_id          // one-to-one
